[package]
name = "ru_pgsql"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
pico-args = "0.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
